fix: Remove background from some Pygment classes
They look bad over a dark background.

--- a/source/_static/css/custom.css
+++ b/source/_static/css/custom.css
@@ -699,9 +699,9 @@ img.align-right {
 .right-align {
     text-align: right;
 }
-/* Override Pygment's default background color for string values which I don't like
+/* Override Pygment's default background color for some values which I don't like
  * until I know how to do it properly (works for JSON and TypeScript). */
-.highlight .s, .highlight .s1, .highlight .s2 {
+.highlight .s, .highlight .s1, .highlight .s2, .highlight .se {
     background-color: transparent;
 }
 .warning {
